# resume-generator-app

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: cloudrun.yml  push_to_artifact_registry.yml  pylint.yml
app/: main.py
app/api/v1/endpoints/: generator.py
app/core/: config.py  exceptions.py  loggers.py
app/models/: resume.py
app/services/: generator.py  style.py  utils.py
data/: sample_resume.json
tests/unittest/: test_config.py  test_loggers.py
