[project]
name = "resume-generator-app"
version = "0.1.0"
description = "Resume generator"
authors = [
    {name = "syahrulhamdani",email = "23093968+syahrulhamdani@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "reportlab (>=4.4.0,<4.5.0)",
    "fastapi[standard] (>=0.115.2,<0.116.0)",
    "pydantic (>=2.11.3,<2.12.0)",
    "pydantic-settings (>=2.8.1,<2.9.0)",
    "python-multipart (>=0.0.20,<0.1.0)",
    "python-json-logger (>=3.3.0,<3.4.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
